2014-04-13  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c, gc.c, rand.c, regex.c, signal.c: Remove inclusion of unneeded
	headers.

2014-04-11  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (make_var_shadowing_env): Remove unnecessary test for
	colon symbol.

2014-04-08  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (rangev_func, range_star_v_func): Use numeric
	equivalence comparison for end test, rather than eql.

2014-04-07  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (eql): Bugfix: not handling floating-point types!
	Two objects which are equal floating-point values must be considered
	eql even if they are distinct objects (not eq).

2014-04-04  Kaz Kylheku  <kaz@kylheku.com>

	Version 88

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date.

	* configure (txr_ver): Bumped. Generational GC is now
	enabled by default.

	* txr.spec: Bumped version.

	* RELNOTES: Updated

	* txr.vim: Regenerated.

2014-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* gc.c (CHECKOBJ_VEC_SIZE, FRESHOBJ_VEC_SIZE): Increase
	to 8 * HEAP_SIZE from 2 * HEAP_SIZE to reduce frequency
	of garbage collections.

2014-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* HACKING: Updating generational GC notes in light of changes.

2014-03-29  Kaz Kylheku  <kaz@kylheku.com>

	Change to how locations are passed around, for the sake of generational
	GC. The issue being solved here is the accuracy of the gc_set function.
	The existing impelmentation is too conservative. It has no generation
	information about the memory location being stored, and so it assumes
	the worst: that it is a location in the middle of a gen 1 object.
	This is sub-optimal, creating unacceptable pressure against the
	checkobj array and, worse, as a consequence causing unreachable gen 0
	objects to be tenured into gen 1.

	To solve this problem, we replace "val *" pointers with a structure
	of type "loc" which keeps track of the object too, which lets us
	discover the generation.

	I tried another approach: using just a pointer with a bitfield